# ellip

./: .gitattributes  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  ellip.code-workspace  tarpaulin.toml
.github/: CONTRIBUTING.md
.github/workflows/: compile.yml  coverage.yml  ellip-ci.yml  graph.yml  publish.yml  report.yml
benches/: bench.rs
coverage-llvm/: cobertura.xml
cpp/: .gitignore  boost_ellippi_f64.cpp  extract_test_data.cpp  k.cpp  util.cpp
ellip-dev-utils/: Cargo.toml  README.md
ellip-dev-utils/src/: benchmark.rs  env.rs  file.rs  lib.rs  parser.rs  stats.rs  test_report.rs  wrapper.rs
ellip-plot-graph/: Cargo.toml  getCamera.js
ellip-plot-graph/src/: lib.rs
ellip-rayon/: CHANGELOG.md  Cargo.toml  README.md
ellip-rayon/benches/: bench.rs  par_threshold.md
ellip-rayon/examples/: generate_threshold_code.rs
ellip-rayon/src/: lib.rs
examples/: README_template.md  cel.rs  cel1.rs  cel2.rs  el1.rs  el2.rs  el3.rs  ellipd.rs  ellipdinc-3d.rs  ellipdinc.rs  ellipe.rs  ellipeinc-3d.rs  ellipeinc.rs  ellipf-3d.rs  ellipf.rs  ellipk.rs  ellippi.rs  ellippiinc.rs  elliprc.rs  elliprd.rs  elliprf.rs  elliprg.rs  elliprj.rs  error_report_template.md  generate-error-report.rs  generate_accuracy_summary.rs  generate_error_report.rs  generate_test_summary.rs  generating_readme.md
examples/ellip-error-report/: Cargo.toml
examples/ellip-error-report/src/: main.rs
examples/plot-graph/: Cargo.toml  generate-3d-plot.sh
examples/plot-graph/src/: lib.rs
figures/: cel.html  cel1.html  cel1_plot.html  cel2.html  cel2_plot.html  cel_plot.html  cel_plot_paper.html  el1.html  el1_plot.html  el2.html  el2_plot.html  el3.html  el3_plot.html  ellipd.html  ellipd_plot.html  ellipdinc.html  ellipdinc_plot.html  ellipe.html  ellipe_plot.html  ellipeinc.html  ellipeinc_3d.html  ellipeinc_plot.html  ellipeinc_plot_3d.html  ellipf.html  ellipf_3d.html  ellipf_plot.html  ellipf_plot_3d.html  ellipk.html  ellipk_plot.html  ellippi_3d.html  ellippi_plot.html  ellippi_plot_3d.html  elliprc.html  elliprc_plot.html  elliprd.html  elliprd_plot.html  elliprf.html  elliprf_plot.html  elliprg.html  elliprg_plot.html  (+7 more)
figures/plot-cel/: el1_plot.html
figures/plot-el2/: el2_plot.html
figures/plot-ellipeinc/: el3_plot.html  ellipe_plot.html
figures/plot-ellipf/: ellipd_plot.html
figures/plot-elliprd/: ellipk_plot.html
figures/plot-elliprj/: ellipdinc_plot.html  ellipf_plot_3d.html  elliprd_plot.html  elliprf_plot.html
logo/: LICENSE
paper/: paper.bib  paper.md
scripts/: prehook.sh
src/: BOOST_LICENSE  BOOST_LICENSE.txt  cel.rs  constants.rs  crate_util.rs  ellipe.rs  ellipeinc.rs  ellipf.rs  ellipk.rs  ellippi.rs  elliprc.rs  elliprd.rs  elliprf.rs  elliprg.rs  elliprj.rs  heuman_lambda.rs  jacobi_zeta.rs  lib.rs  polyeval.rs  test_util.rs  util.rs
src/bulirsch/: cel.rs  constants.rs  el.rs  mod.rs
src/carlson/: LICENSE  elliprc.rs  elliprd.rs  elliprf.rs  elliprg.rs  elliprj.rs  mod.rs
src/legendre/: LICENSE  ellipd.rs  ellipdinc.rs  ellipe.rs  ellipeinc.rs  ellipf.rs  ellipk.rs  ellippi.rs  ellippiinc.rs  mod.rs
src/misc/: heuman_lambda.rs  jacobi_zeta.rs  mod.rs
tests/: README.md  accuracy_summary.md
tests/data/: compare_test_data.py  temp.py
tests/data/boost/: carlson  carlson.cpp  ellint_e2_data.txt  ellint_f_data.txt  ellint_k_data.txt  ellint_pi2_data_f64.txt  ellint_rc_data.txt  ellint_rj_e4.txt  ellipd_data.txt  ellipdinc_data.txt  elliprd_data.txt  elliprf_data.csv  elliprf_data.txt  elliprg.txt  elliprg_data.csv  elliprj_data.csv  elliprj_data.txt  elliprj_e2.txt  elliprj_e3.txt  elliprj_pv.csv  elliprj_pv_small.csv  elliprj_zp.txt
tests/data/coverage/: ellipe_cov.csv  ellipk_cov.csv
tests/data/f32/wolfram/: cel1_data.csv  cel2_data.csv  cel_data.csv  cel_pv.csv  el1_data.csv  el2_data.csv  el3_data.csv  el3_pv.csv  ellipd_data.csv  ellipd_neg.csv  ellipe_data.csv  ellipe_neg.csv  ellipeinc_neg.csv  ellipf_data.csv  ellipf_neg.csv  ellipk_data.csv  ellipk_neg.csv  ellippi_data.csv  ellippi_neg.csv  ellippi_pv.csv  ellippiinc_neg.csv  ellippiinc_pv.csv  elliprc_data.csv  elliprc_pv.csv  elliprd_data.csv  elliprf_data.csv  elliprg_data.csv  elliprj_data.csv  elliprj_pv.csv  elliprj_pv_small.csv  heuman_lambda_data.csv  jacobi_zeta_data.csv
tests/data/wolfram/: cel1_data.csv  cel2_data.csv  cel_data.csv  cel_pv.csv  el1_data.csv  el2_data.csv  el3_data.csv  el3_pv.csv  ellipd_data.csv  ellipd_neg.csv  ellipdinc_data.csv  ellipdinc_neg.csv  ellipe_cov.csv  ellipe_data.csv  ellipe_limit.csv  ellipe_neg.csv  ellipeinc_data.csv  ellipeinc_limit.csv  ellipeinc_neg.csv  ellipf_data.csv  ellipf_limit.csv  ellipf_neg.csv  ellipk_cov.csv  ellipk_data.csv  ellipk_limit.csv  ellipk_neg.csv  ellippi_data.csv  ellippi_limit.csv  ellippi_neg.csv  ellippi_pv.csv  ellippiinc_data.csv  ellippiinc_limit.csv  ellippiinc_neg.csv  ellippiinc_pv.csv  elliprc_data.csv  elliprc_pv.csv  elliprd_data.csv  elliprf_data.csv  elliprg_data.csv  elliprj_data.csv  (+5 more)
tests/wolfram/: bulirsch-cel.wls  bulirsch-el.wls  carlson.wls  ellippi.wls  ellippiinc.wls  f32-bulirsch.wls  f32-carlson.wls  f32-heuman-lambda.wls  f32-jacobi-zeta.wls  f32-legendre.wls  heuman-lambda.wls  jacobi-zeta.wls  legendre-complete.wls  legendre-coverage.wls  legendre-incomplete.wls
