[package]
name = "ellip"
version = "0.3.5"
authors = ["Sira Pornsiriprasert <code@psira.me>"]

description = "Elliptic integrals for Rust"
categories = ["mathematics", "science"]
keywords = ["special", "elliptic", "integral"]
documentation = "https://docs.rs/ellip"
homepage = "https://github.com/p-sira/ellip"
repository = "https://github.com/p-sira/ellip"
readme = "README.md"
license = "BSD-3-Clause"

edition = "2021"
exclude = [
    "logo",
    "figures",
    "tests/data",
    "tests/wolfram",
    "examples",
    "benches",
    "cpp",
    ".github",
    ".gitignore",
    ".gitattributes",
    "ellip.code-workspace",
]

[dependencies]
num-lazy = "0.2.0"
num-traits = "0.2"
numeric_literals = "0.2.0"

[dev-dependencies]
criterion = "0.5"
csv = "1.3.1"
itertools = "0.14"
tabled = "0.20.0"

[[bench]]
name = "bench"
harness = false

[features]
default = []
# Used for generating code coverage report only
reduce-iteration = []
