[workspace]
members = ["ellip-rayon", "ellip-dev-utils", "ellip-plot-graph"]

[workspace.package]
version = "1.0.4"
authors = ["Sira Pornsiriprasert <code@psira.me>"]
categories = ["mathematics", "science"]
keywords = ["special", "elliptic", "integral"]

homepage = "https://github.com/p-sira/ellip"
repository = "https://github.com/p-sira/ellip"
documentation = "https://docs.rs/ellip"

license = "BSD-3-Clause"

[workspace.dependencies]
ellip = { version = "1.0", path = "." }
ellip-dev-utils = { version = "1.0", path = "ellip-dev-utils" }

[package.metadata.release]
dependent-version = "upgrade"
pre-release-hook = ["bash", "scripts/prehook.sh"]

[package]
name = "ellip"
version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

description = "Elliptic integrals for Rust"
readme = "README.md"

edition = "2021"
include = ["/src", "/tests/README.md", "/LICENSE"]

[dependencies]
num-lazy = "0.3.0"
num-traits = "0.2"
numeric_literals = "0.2.0"

[dev-dependencies]
criterion = "0.7"
csv = "1.3.1"
ellip-dev-utils = { workspace = true }
itertools = "0.14"

[[bench]]
name = "bench"
harness = false

[features]
default = []
unstable = []
# Deprecated. Has no effect. The feature flag ept for legacy compatibility. Ellip supports no_std by default. 
no_std = []
# Used for generating code coverage report only
test_force_fail = []
