[package]
name = "ellip-dev-utils"
version = "0.1.0"
edition = "2024"
description = "Development utilities for Ellip."
homepage = "https://github.com/p-sira/ellip"
repository = "https://github.com/p-sira/ellip"
readme = "README.md"
license = "BSD-3-Clause"

[dependencies]
csv = "1.3.1"
glob = "0.3.2"
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37.0"
tabled = "0.20.0"

[dev-dependencies]
tempfile = "3.8"
