[package]
name = "ellip-dev-utils"
version.workspace = true
authors.workspace = true

homepage.workspace = true
repository.workspace = true
license.workspace = true
edition = "2024"
description = "Development utilities for Ellip."
readme = "README.md"

[dependencies]
csv = "1.3.1"
glob = "0.3.2"
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37.0"
tabled = "0.20.0"

[dev-dependencies]
tempfile = "3.8"
