[package]
name = "ellip-rayon"
version = "0.5.2"
edition = "2024"

authors = ["Sira Pornsiriprasert <code@psira.me>"]
description = "Compute elliptic integrals in parallel"
categories = ["mathematics", "science"]
keywords = ["special", "elliptic", "integral"]
documentation = "https://docs.rs/ellip-rayon"
homepage = "https://github.com/p-sira/ellip"
repository = "https://github.com/p-sira/ellip"
readme = "README.md"
license = "BSD-3-Clause"

exclude = [
    ".gitignore",
    "benches/par_threshold.md",
    "CHANGELOG.md",
]

[dependencies]
ellip = "0.5.2"
itertools = "0.14.0"
num-traits = "0.2.19"
rayon = "1.11.0"

[dev-dependencies]
criterion = "0.7.0"
ellip-dev-utils = { version = "0.1.0", path = "../ellip-dev-utils" }
glob = "0.3.3"
regex = "1.12.2"
serde_json = "1.0.143"
tabled = "0.20.0"

[[bench]]
name = "bench"
harness = false
