[package]
name = "ellip-rayon"
version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

homepage.workspace = true
repository.workspace = true
license.workspace = true
edition = "2024"

description = "Compute elliptic integrals in parallel"
documentation = "https://docs.rs/ellip-rayon"
readme = "README.md"

exclude = [".gitignore", "benches/par_threshold.md", "CHANGELOG.md"]

[dependencies]
ellip = { workspace = true }
itertools = "0.14.0"
num-traits = "0.2.19"
rayon = "1.11.0"

[dev-dependencies]
criterion = "0.7.0"
ellip-dev-utils = { workspace = true }
glob = "0.3.3"
regex = "1.12.2"
serde_json = "1.0.143"
tabled = "0.20.0"

[[bench]]
name = "bench"
harness = false
