[package]
name = "ellip-plot-graph"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
description = "Generate plots for Ellip crate"

[dependencies]
ellip = { version = "0.5", path = "../.." }
plotly = { version = "0.13.5", features = ["static_export_default"] }

[features]
# Open the generated HTML
open-html = []
# Save figure to figures/bin
save-to-bin = []
